# antivirus_program

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: scanbox.toml
config/clamav/: freshclam.conf
docs/: architecture.md  demo.md  dependencies.md  development.md  operations.md  packaging-strategy.md  release-decision-boundary.md  release-decision-v0.1.0.md  release-notes-dry-run-example.md  release-notes-template.md  release-notes-v0.1.0-dry-run.md  release-notes-v0.1.0.md  release-prep-dry-run.md  release-prep-v0.1.0-dry-run.md  release-prep-v0.1.0-packaged-candidate-dry-run.md  release-workflow.md  repo-metadata.md
docs/milestones/: scanbox-v1-freeze.md  scanbox-v2-quarantine.md  scanbox-v2.2-directory-mvp.md
packaging/: packaging-manifest.json
rules/capa/: manifest.json
rules/yara/: manifest.json
scripts/: acceptance_v1.ps1  acceptance_v2_directory.ps1  acceptance_v2_quarantine.ps1  assemble_packaging_staging_tree.ps1  compare_packaged_zip_consistency.ps1  package_packaging_staging_tree.ps1  run_packaged_candidate_rehearsal.ps1  run_scanbox.ps1  run_standalone_pytest.ps1  setup_windows.ps1  update_rules.ps1  validate_operator_zip_consumption.ps1  verify_env.ps1  verify_packaged_zip_artifact.ps1  verify_packaging_staging_tree.ps1  verify_release_readiness.ps1  write_packaged_candidate_reviewer_summary.ps1
src/scanbox/: __init__.py  __main__.py
tests/integration/: test_archive_scan.py  test_cli_smoke.py  test_directory_scan.py  test_yara_rule_fixture.py
tests/stubs/: capa_result.json  (+1 more)
(+57 files in other folders)
